# ai-service-desk

./: README.md  locust.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: d29c406e2eae_add_assignee_email_column.py  dbe23ff288e5_add_assignee_email.py
app/: main.py
app/api/: ai.py  tickets.py
app/core/: config.py  database.py  deps.py
app/exceptions/: ticket_exceptions.py
app/models/: ticket.py
app/repositories/: ticket_repository.py
app/schemas/: ticket.py
app/services/: ticket_service.py
app/services/aws/: bedrock_service.py
test/: conftest.py  test_title.py
test/integration/: test_create_ticket.py  test_delete_ticket.py  test_get_ticket.py  test_update_ticket.py
test/unit/: test_repository.py  test_schema.py  test_service.py
